objects/Opp_Activity_Rollup__mdt.object
<CustomObject>
    <label>Opp Activity Rollup</label>
    <pluralLabel>Opp Activity Rollups</pluralLabel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary_Type__c</fullName>
        <label>Summary Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Min</fullName>
                    <default>true</default>
                    <label>Min</label>
                </value>
                <value>
                    <fullName>Max</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Field__c</fullName>
        <label>Opportunity Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Sort_Field__c</fullName>
        <label>Activity Sort Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Activity_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Activity Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Summary_Field__c</fullName>
        <label>Activity Summary Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Activity_False__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Activity False</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Activity_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Activity Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Activity_False__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Activity False</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extra_Conditions_Field_Names__c</fullName>
        <label>Extra Conditions Field Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extra_Conditions_Field_Values__c</fullName>
        <label>Extra Conditions Field Values</label>
        <type>TextArea</type>
    </fields>
</CustomObject>